<resources>
    <string name="app_name">RosterToGo</string>
    <string name="version_number">v0.7 build 20160917</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Options</string>
    <string name="action_figures">Statistiques</string>
    <string name="title_activity_activity_login">Merci de vous identifier</string>

    <string name="file_name">Nom de fichier</string>

    <!-- Strings related to Settings -->
    <string name="keypref_google_calendars_flight">pref_google_calendar_flight</string>
    <string name="keypref_google_calendars_ground">pref_google_calendar_ground</string>
    <string name="keypref_google_calendars_daysoff">pref_google_calendar_daysoff</string>
    <string name="keypref_google_calendars_vacation">pref_google_calendar_vacation</string>
    <string name="keypref_google_calendars_dayswhite">pref_google_calendar_dayswhite</string>
    <string name="keypref_planning_autosign">pref_planning_autosign</string>

    <string name="remember_me">Se souvenir</string>
    <string name="auto_sign_planning">Signer automatiquement le planning</string>
    <string name="use_default_colors">Utiliser les couleurs par défaut</string>
    <string name="flights_calendar">Agenda(s) vols</string>
    <string name="ground_activities_calendar">Agenda(s) activités sol</string>
    <string name="days_off_calendar">Agenda(s) jours OFF</string>
    <string name="vacations_calendar">Agenda(s) congés</string>
    <string name="days_white_calendar">Agenda(s) jours blancs</string>
    <string name="connection">Connexion</string>
    <string name="google_synchro">Synchronisation Google</string>
    <string name="enter_new_folder_name">Entrer un nom pour le nouveau dossier</string>
    <string name="cancel">Annuler</string>
    <string name="no_planning_avail">Aucun planning à sauvegarder</string>
    <string name="ok">OK</string>
    <string name="external_storage_not_available">Mémoire de stockage indisponible</string>
    <string name="file_could_not_be_saved">Le fichier n\'a pas pu être sauvé</string>
    <string name="file_saved">Fichier sauvé</string>
    <string name="rostertogo">RosterToGo</string>
    <string name="tvf_planning_synchronized">Le planning TVF synchronisé</string>
    <string name="google_email">Adresse e-mail du compte Google</string>
    <string name="avail_calendars">Calendriers disponibles</string>
    <string name="check_google_account_mail_adress">Vérifier l\'adresse mail du compte Google</string>
    <string name="Apply">Valider</string>
    <string name="credits">Credits</string>
    <string name="cyril_real">Cyril REAL</string>
    <string name="about">A propos</string>
    <string name="activity_details">Détails de l\'activité</string>
    <string name="save">Sauvegarder</string>

    <string name="departure">Départ :</string>
    <string name="arrival">Arrivée :</string>
    <string name="function">Fonction :</string>
    <string name="flight_time">Temps de vol :</string>
    <string name="duration">Durée :</string>
    <string name="hotel">Hôtel :</string>

    <!--errors-->
    <string name="err_msg_login_pass">Le login ou le mot de passe saisi est incorrect</string>
    <string name="err_msg_connection">Erreur lors de la connexion</string>
    <string name="err_msg_modifications_not_checked">Les modifications de planning n\'ont pas été vérifiées</string>
    <string name="err_msg_planning_not_signed">Le planning n\'a pas été signé</string>
    <string name="err_msg_misc">Erreur non déterminée</string>
    <string name="please_register_to_access_your_roster">Merci de vous identifier pour\naccéder à l\'application</string>
    <string name="error_during_synchronisation">Erreur durant la synchronisation...</string>

    <string name="synchronisation_successful">Synchronisation réussie !</string>
    <string name="login">Login</string>
    <string name="password">Mot de passe</string>
    <string name="ready">Prêt...</string>
    <string name="development">Développement : </string>
    <string name="rostertogo_at_free_fr">rostertogo@free.fr</string>

    <string name="planning_generation_in_progress">"Génération du planning en cours.\nMerci de patienter quelques secondes..."</string>
    <string name="planning_synchronisation_in_progress">"Synchronisation du planning en cours.\nMerci de patienter quelques secondes..."</string>


</resources>
