<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pluszero.rostertogo.FragLogin"
    android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_number"
        android:id="@+id/textView4"
        android:gravity="center"
        android:layout_above="@+id/linlayPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/linlayLogin"
        android:padding="8dp"
        android:background="@color/login_background"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/development"
            android:id="@+id/textView2"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cyril_real"
            android:id="@+id/textView5"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/login_background"
        android:id="@+id/linlayPassword"
        android:layout_below="@+id/linlayLogin"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact : "
            android:id="@+id/textView3"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rostertogo_at_free_fr"
            android:id="@+id/tvMailAdress"
            />

    </LinearLayout>

</LinearLayout>
